--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 		<br>
 		<form>
 			<h3>Volum (en mL) d'aiguardent que s'ha de rebaixar:</h3>
-		<input type="text" name="a_in" id="a_in" placeholder="Volum en mL..." onkeyup="novesDades()" onchange="novesDades()">
+		<input type="number" name="a_in" id="a_in" placeholder="Volum en mL..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
 			<h3>% d'alcohol de l'aiguardent:</h3>
-			<input type="text" name="b_in" id="b_in" placeholder="% d'alcohol..." onkeyup="novesDades()" onchange="novesDades()">
+			<input type="number" name="b_in" id="b_in" placeholder="% d'alcohol..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
 			<h3>Sucre (en grams) afegit per litre:</h3>
-			<input type="text" name="g_in" id="g_in" placeholder="Sucre en grams..." onkeyup="novesDades()" onchange="novesDades()">
+			<input type="number" name="g_in" id="g_in" placeholder="Sucre en grams..." onkeyup="novesDades()" onchange="novesDades()">
 		
 		</form>
 		<h2 id="resultat"></h2>
