--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 		<h4>Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua has d'afegir a la teva ratafia per aconseguir una graduació de 25º.</h4>
 		<br>
 		<form>
-			<h3>Volum (en mL) d'aiguardent que s'ha de rebaixar:</h3>
-		<input type="text" name="a_in" id="a_in" placeholder="Volum en mL..." onkeyup="novesDades()" onchange="novesDades()">
+			<h3>Volum (en ml) d'aiguardent que s'ha de rebaixar:</h3>
+		<input type="text" name="a_in" id="a_in" placeholder="Volum en ml..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
 			<h3>% d'alcohol de l'aiguardent:</h3>
 			<input type="text" name="b_in" id="b_in" placeholder="% d'alcohol..." onkeyup="novesDades()" onchange="novesDades()">
@@ -106,7 +106,7 @@
 		let X = S * Z;
 		let G = X * "0.6";
 		let H = E - G;
-		document.getElementById('resultat').innerHTML = "Has d'afegir " + H + " mL d'aigua a la teva ratafia.";
+		document.getElementById('resultat').innerHTML = "Has d'afegir " + H + " ml d'aigua a la teva ratafia.";
 		
 		
 	}
