--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 		let X = S * Z;
 		let G = X * "0.6";
 		let H = E - G;
-		document.getElementById('resultat').innerHTML = "Has d'afegir " + H + " ml d'aigua a la teva ratafia.";
+		let R = Math.round(H * 100) / 100
+		document.getElementById('resultat').innerHTML = "Has d'afegir " + R + " ml d'aigua a la teva ratafia.";
 		
 		
 	}
