--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<div class="app_frame">
 	<h1>Com rebaixar l'aiguardent de la ratafia?</h1>
 		
-		<h4>Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua has d'afegir a la teva ratafia per aconseguir una graduació de 25º.</h4>
+		<h4>Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua has d'afegir a la teva ratafia per aconseguir la graduació d'alcohol desitjada.</h4>
 		<br>
 		<form>
 			<h3>Volum (en ml) d'aiguardent que s'ha de rebaixar:</h3>
