--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<style type="text/css">
 		body {
-			padding: 20px;
+			padding: 10px;
 			box-sizing: border-box;
 		}
 		div {
@@ -39,6 +39,13 @@
 			
 			text-align: center;
 			color: white;
+		}
+		h5 {
+			
+			font-family: Helvetica, sans-serif;
+			margin: -15px 0px 7px 0;
+			color: white;
+			font-weight: 200;
 		}
 		h2 {
 			
@@ -81,6 +88,7 @@
 		<br>
 		<form>
 			<h3>Volum (en ml) d'aiguardent que s'ha de rebaixar:</h3>
+			<h5>Atenció: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà disminuït en relació a la quantitat i grau inicial.</h5>
 		<input type="text" name="a_in" id="a_in" placeholder="Volum en ml..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
 			<h3>% d'alcohol de l'aiguardent:</h3>
