--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
 		<h4>Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua has d'afegir a la teva ratafia per aconseguir la graduació d'alcohol desitjada.</h4>
 		<br>
 		<form>
-			<h3>Volum (en ml) d'aiguardent que s'ha de rebaixar:</h3>
+			<h3>Volum d'aiguardent que s'ha de rebaixar:</h3>
 			<h5>Atenció: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà disminuït en relació a la quantitat i grau inicial.</h5>
 		<input type="text" name="a_in" id="a_in" placeholder="Volum en ml..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
-			<h3>% d'alcohol de l'aiguardent:</h3>
+			<h3>Graduació d'alcohol de l'aiguardent:</h3>
 			<h5>Nota: es mesura amb un alcoholímitre, sempre que l’aiguardent no porti o hi haguem afegit sucre.</h5>
 			<input type="text" name="b_in" id="b_in" placeholder="% d'alcohol..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
-			<h3>% d'alcohol desitjat:</h3>
+			<h3>Graduació d'alcohol desitjat:</h3>
 			<input type="text" name="n_in" id="n_in" placeholder="% d'alcohol..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
-			<h3>Sucre (en grams) afegit per litre:</h3>
+			<h3>Sucre afegit per litre:</h3>
 			<input type="text" name="g_in" id="g_in" placeholder="Sucre en grams..." onkeyup="novesDades()" onchange="novesDades()">
 		
 		</form>
