--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<div class="app_frame">
 	<h1>Com rebaixar l'aiguardent de la ratafia?</h1>
 		
-		<h4>Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua has d'afegir a la teva ratafia per aconseguir la graduació d'alcohol desitjada.</h4>
+		<h4>Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua i grams de sucre has d'afegir a la teva ratafia per aconseguir la graduació d'alcohol desitjada.</h4>
 		<br>
 		<form>
 			<h3>Volum d'aiguardent que s'ha de rebaixar:</h3>
@@ -94,7 +94,7 @@
 			<h5>Nota: es mesura amb un alcoholímitre, sempre que l’aiguardent no porti o hi haguem afegit sucre.</h5>
 			<input type="text" name="b_in" id="b_in" placeholder="% d'alcohol..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
-			<h3>Graduació d'alcohol desitjat:</h3>
+			<h3>Graduació d'alcohol desitjada:</h3>
 			<input type="text" name="n_in" id="n_in" placeholder="% d'alcohol..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
 			<h3>Sucre afegit per litre:</h3>
