--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <body bgcolor="#93613F">
 	<div class="app_frame">
-	<h1>Com rebaixar l'aiguardent de la ratafia?</h1>
+	<h1>Calculadora per rebaixar l'aiguardent de la ratafia</h1>
 		
 		<h4>Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua i grams de sucre has d'afegir a la teva ratafia per aconseguir la graduació d'alcohol desitjada.</h4>
 		<br>
