--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<h3>Graduació d'alcohol desitjada:</h3>
 			<input type="text" name="n_in" id="n_in" placeholder="% d'alcohol..." onkeyup="novesDades()" onchange="novesDades()">
 			<br>
-			<h3>Sucre afegit per litre:</h3>
+			<h3>Sucre que vols afegir per litre:</h3>
 			<input type="text" name="g_in" id="g_in" placeholder="Sucre en grams..." onkeyup="novesDades()" onchange="novesDades()">
 		
 		</form>
