--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>calculadora.ratafia.app - Confraria de la Ratafia</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -73,13 +74,28 @@
   transition:background-color 0.5s ease;
 			font-size: 16px;
 }
-		
+	.preloader {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   z-index: 9999;
+   background-image: url('../loader.gif');
+   background-repeat: no-repeat; 
+   background-color: #93613F;
+   background-position: center;
+}	
 		
 	
 	</style>
+	<script>$(window).load(function() {
+   $('.preloader').fadeOut('slow');
+});</script>
 </head>
 
 <body bgcolor="#93613F">
+	<div class="preloader"></div>
 	<div class="app_frame">
 	<h1>Calculadora per rebaixar l'aiguardent de la ratafia</h1>
 		
