--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
    width: 100%;
    height: 100%;
    z-index: 9999;
-   background-image: url('../loader.gif');
+   background-image: url('/preloader.gif');
    background-repeat: no-repeat; 
    background-color: #93613F;
    background-position: center;
