--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+	<script src="data:text/html,<html><script>$(window).load(function() { $('.preloader').fadeOut('slow'); });</script></html>"</script>
 
 
 	<style type="text/css">
