--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		let H = E - G;
 		let J = Math.round(X)
 		let R = Math.round(H)
-		document.getElementById('resultat').innerHTML = "Has d'afegir " + R + " ml d'aigua i " + J + " g de sucre a la teva ratafia.";
+		document.getElementById('resultat').innerHTML = "Has d'afegir: \n " + R + " ml d'aigua \n " + J + " g de sucre a la teva ratafia.";
 		
 		
 	}
