--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		
 		</form>
 		<h2 id="resultat"></h2>
+		<h4>Es recomana utilitzar aigua de mineralització molt dèbil. Per minimitzar l'enterboliment de la ratafia, recomanem afegir l'aiguardent sobre el xarop.</h4>
 	</div>
 	<script>
 	function novesDades() {
