--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 		let H = E - G;
 		let J = Math.round(X)
 		let R = Math.round(H)
-		document.getElementById('resultat').innerHTML = "Has d'afegir " + R + " ml d'aigua i " + J + " g de sucre a la teva ratafia. El volum final de ratafia que obtindràs és " + D + " ml";
+		let I = Math.round(D)
+		document.getElementById('resultat').innerHTML = "Has d'afegir " + R + " ml d'aigua i " + J + " g de sucre a la teva ratafia. El volum final de ratafia que obtindràs és " + I + " ml";
 		
 		
 	}
