--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-	<!--- © 2019-2021 Aniol Pagès--->
 	<html>
 	<head>
 		<meta charset="UTF-8">
@@ -7,7 +6,6 @@
 		<meta name="description" content="Calculadora per rebaixar l'aiguardent de la ratafia al grau desitjat.">
 		<meta name="keywords" content="calculadora, ratafia, aiguardent, rebaixar, confraria, sucre">
 		<meta name="author" content="Aniol Pagès i Xavi Ribas - Confraria de la Ratafia">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>calculadora.ratafia.app - Confraria de la Ratafia</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -15,257 +13,57 @@
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-		<style type="text/css">
-		body {
-			background-color: #fff;
-			min-height: 100vh;
-			width: 100vw;
-			margin: 0;
-			padding: 0;
-			font-family: 'Open Sans', Helvetica, sans-serif;
-		}
-		#titol {
-			font-size: 37px;
-		}
-		input {
-			display: inline-block;
-			color: black;
-			padding: 10px;
-			width: 100%;
-			box-sizing: border-box;
-			background-color: #ccc;
-			border: none;
-			margin: 0px auto;
-			font-size: 16px;
-			border-radius: 10px;
-			margin-top: 4px;
-			height: 50px;
-			box-shadow: rgba(0, 0, 0, 0.06) 0 5px 10px;
-			outline: none !important;
-			transition: 0.25s ease-in-out;
-			position: relative;
-		}
-		input:focus {
-			box-shadow: rgba(0, 0, 0, 0.12) 0 5px 13px;
-			top: -2px;
-		}
-		.app_frame {
-			display: none;
-		}
-		#ti {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			width: 100vw;
-			height: 100%;
-		}
-		#t {
-			display: block;
-			border-radius: 20px;
-			padding-left: 2.5vw;
-			padding-right: 2.5vw;
-			padding-top: 30px;
-			padding-bottom: 30px;
-			background-color: #e9e9e9;
-			width: 95vw;
-			max-width: 1300px;
-			margin-top: 50px;
-			margin-left: 2.5vw;
-			margin-right: 2.5vw;
-			box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px;
-			transition: height 0.5s ease-in-out;
-		}
-		.d {
-			display: flex;
-		}
-		.d div {
-			min-width: calc(50% - 15px);
-			margin-top: 18px;
-		}
-		.f {
-			padding-left: 15px;
-		}
-		.g {
-			padding-right: 15px;
-		}
-		#r {
-			transition: 0.5s ease-in-out;
-		}
-		@media only screen and (max-width: 700px) {
-			.d {
-				display: block;
-			}
-			.f {
-				padding-left: 0;
-			}
-			.g {
-				padding-right: 0;
-			}
-			#t {
-				padding-top: 10px;
-				margin-top: 15px;
-			}
-			#titol {
-				font-size: 26px;
-			}
-		}
-		@media (prefers-color-scheme: dark) {
-			body {
-				background-color: #000;
-				color: white;
-			}
-			#t {
-				background-color: #191919;
-			}
-			input {
-				background-color: #3a3a3a;
-				color: white;
-			}
-		}
-	</style>
-</head>
-<body>
-	<div id="ti">
-		<div id="t">
-			<p style="font-weight: 700; margin: 0;" id="titol">Calculadora per rebaixar l'aiguardent</p>
-			<p style="margin-top: 2px;">Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua i grams de sucre has d'afegir a la teva ratafia per aconseguir la graduació d'alcohol desitjada.</p>
-			<br>
-			<div class="d">
-				<div class="g">
-					<p style="font-weight: 600; margin: 0;">Volum d'aiguardent actual</p>
-					<p style="font-size: 12px; margin-top: 2px;">NOTA: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà disminuït respecte l'inicial.</p>
-					<input type="number" id="a_in" number placeholder="1000 (ml)" onkeyup="novesDades()" onchange="novesDades()">
-				</div>
-				<div class="f">
-					<p style="font-weight: 600; margin: 0;">Graduació d'alcohol actual</p>
-					<p style="font-size: 12px; margin-top: 2px;">NOTA: es mesura amb un alcoholímitre, sempre que l’aiguardent no porti o hi haguem afegit sucre.</p>
-					<input type="number" id="b_in" number placeholder="29 (%)" onkeyup="novesDades()" onchange="novesDades()">
-				</div>
-			</div>
-			<div class="d">
-				<div class="g">
-					<p style="font-weight: 600; margin: 0;">Graduació d'alcohol desitjada</p>
-					<input type="number" id="n_in" number placeholder="24 (%)" onkeyup="novesDades()" onchange="novesDades()">
-				</div>
-				<div class="f">
-					<p style="font-weight: 600; margin: 0;">Sucre que vols afegir per litre</p>
-					<input type="number" id="g_in" number placeholder="150 (g)" onkeyup="novesDades()" onchange="novesDades()">
-				</div>
-			</div>
-			<div id="r" style="margin-top: 50px; display: none; opacity: 0;">
-				<p style="font-weight: 700; font-size: 30px; margin-bottom: 0;">Afegeix</p>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	<body>
+		<div id="ti">
+			<div id="t">
+				<p style="font-weight: 700; margin: 0;" id="titol">Calculadora per rebaixar l'aiguardent</p>
+				<p style="margin-top: 2px;">Amb aquesta calculadora podràs saber fàcilment quants mil·lilitres d'aigua i grams de sucre has d'afegir a la teva ratafia per aconseguir la graduació d'alcohol desitjada.<br>La graduació desitjada hauria de ser entre 26% i 28%, i 150 g de sucre per litre (es pot incrementar si es troba poc dolça).</p>
+				<br>
 				<div class="d">
 					<div class="g">
-						<p id="f_a" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
-						<p style="margin-top: 2px; font-size: 12px;">d'aigua</p>
+						<p style="font-weight: 600; margin: 0;">Volum d'aiguardent actual</p>
+						<p style="font-size: 12px; margin-top: 2px;">NOTA: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà disminuït respecte l'inicial.</p>
+						<input type="number" id="a_in" number placeholder="1000 (ml)" onkeyup="novesDades()" onchange="novesDades()">
 					</div>
 					<div class="f">
-						<p id="f_s" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
-						<p style="margin-top: 2px; font-size: 12px;">de sucre</p>
+						<p style="font-weight: 600; margin: 0;">Graduació d'alcohol actual</p>
+						<p style="font-size: 12px; margin-top: 2px;">NOTA: es mesura amb un alcoholímitre, sempre que l’aiguardent no porti o hi haguem afegit sucre.</p>
+						<input type="number" id="b_in" number placeholder="29 (%)" onkeyup="novesDades()" onchange="novesDades()">
 					</div>
 				</div>
-				<p id="f_v" style="font-size: 14px;"></p>
+				<div class="d">
+					<div class="g">
+						<p style="font-weight: 600; margin: 0;">Graduació d'alcohol desitjada</p>
+						<input type="number" id="n_in" number placeholder="24 (%)" onkeyup="novesDades()" onchange="novesDades()">
+					</div>
+					<div class="f">
+						<p style="font-weight: 600; margin: 0;">Sucre que vols afegir per litre</p>
+						<input type="number" id="g_in" number placeholder="150 (g)" onkeyup="novesDades()" onchange="novesDades()">
+					</div>
+				</div>
+				<div id="r" style="margin-top: 50px; display: none; opacity: 0;">
+					<p style="font-weight: 700; font-size: 30px; margin-bottom: 0;">Afegeix</p>
+					<div class="d">
+						<div class="g">
+							<p id="f_a" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
+							<p style="margin-top: 2px; font-size: 12px;">d'aigua</p>
+						</div>
+						<div class="f">
+							<p id="f_s" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
+							<p style="margin-top: 2px; font-size: 12px;">de sucre</p>
+						</div>
+					</div>
+					<p id="f_v" style="font-size: 14px;"></p>
+				</div>
 			</div>
 		</div>
-	</div>
-	<br>
-	<center>
-		<p style="font-size: 12px;">© Confraria de la Ratafia</p>
-	</center>
-	<br>
-	<script>
-		function resize() {
-			document.getElementById('t').style.height = 'auto';
-			document.getElementById('t').style.height = document.getElementById('t').offsetHeight + 'px';
-		}
-		window.onresize = resize;
-		document.getElementById('t').style.height = document.getElementById('t').offsetHeight + 'px';
-		var i1 = false;
-		var i2 = false;
-		var i3 = false;
-		var i4 = false;
-		var fet = false;
-		function novesDades() {
-			var A = document.getElementById("a_in").value;
-			var B = document.getElementById("b_in").value;
-			var S = document.getElementById("g_in").value;
-			var N = document.getElementById("n_in").value;
-			if (A !== '') {
-				i1 = true;
-			} else {
-				i1 = false;
-			}
-			if (B !== '') {
-				i2 = true;
-			} else {
-				i2 = false;
-			}
-			if (S !== '') {
-				i3 = true;
-			} else {
-				i3 = false;
-			}
-			if (N !== '') {
-				i4 = true;
-			} else {
-				i4 = false;
-			}
-			let M = N / "100";
-			let Y = B / "100";
-			let C = A * Y;
-			let D = C / M;
-			let E = D - A;
-			let Z = D / "1000";
-			let X = S * Z;
-			let G = X * "0.6";
-			let H = E - G;
-			let J = Math.round(X)
-			let R = Math.round(H)
-			let I = Math.round(D)
-			document.getElementById('f_a').innerHTML = R + ' ml';
-			document.getElementById('f_s').innerHTML = J + ' g';
-			document.getElementById('f_v').innerHTML = 'Per aconseguir un volum de ' + I + ' ml a una graduació de ' + N + "%. Recomanem utilitzar aigua de mineralització molt dèbil. Per minimitzar l'enterboliment de la ratafia, afegiu l'aiguardent sobre el xarop.";
-			if (i1 == true) {
-				if (i2 == true) {
-					if (i3 == true) {
-						if (i4 == true) {
-							if (fet == false) {
-								fet = true;
-								document.getElementById('r').style.display = 'block';
-								document.getElementById('t').style.height = Math.floor(document.getElementById('t').offsetHeight + document.getElementById('r').offsetHeight) + 'px';
-								setTimeout(function() { document.getElementById('r').style.opacity = 1; }, 150);
-							}
-						}
-					}
-				}
-			}
-		}
-		function setInputFilter(textbox, inputFilter) {
-			["input", "keydown", "keyup", "mousedown", "mouseup", "select", "contextmenu", "drop"].forEach(function(event) {
-				textbox.addEventListener(event, function() {
-					if (inputFilter(this.value)) {
-						this.oldValue = this.value;
-						this.oldSelectionStart = this.selectionStart;
-						this.oldSelectionEnd = this.selectionEnd;
-					} else if (this.hasOwnProperty("oldValue")) {
-						this.value = this.oldValue;
-						this.setSelectionRange(this.oldSelectionStart, this.oldSelectionEnd);
-					}
-				});
-			});
-		}
-		setInputFilter(document.getElementById("b_in"), function(value) {
-			return /^\d*\.?\d*$/.test(value);
-		});
-		setInputFilter(document.getElementById("a_in"), function(value) {
-			return /^\d*\.?\d*$/.test(value);
-		});
-		setInputFilter(document.getElementById("g_in"), function(value) {
-			return /^\d*\.?\d*$/.test(value);
-		});
-		setInputFilter(document.getElementById("n_in"), function(value) {
-			return /^\d*\.?\d*$/.test(value);
-		});
-	</script>
-</body>
-</html>
+		<br>
+		<center>
+			<a href="https://ratafia.cat" target="_blank" style="font-size: 12px;">© Confraria de la Ratafia</a>
+		</center>
+		<br>
+		<script src="script.js" />
+	</body>
+	</html>
