Fix load of script

--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
 			<a href="https://ratafia.cat" target="_blank" style="font-size: 12px;">© Confraria de la Ratafia</a>
 		</center>
 		<br>
-		<script src="script.js" />
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 	</html>
