Correcció text i canvi tipografia

--- a/index.html
+++ b/index.html
@@ -11,25 +11,23 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="manifest" href="/site.webmanifest">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<div id="ti">
 			<div id="t">
 				<p id="titol">Calculadora per rebaixar l'aiguardent</p>
-				<p style="margin-top: 2px;">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per aconseguir la graduació d'alcohol desitjada.</p>
+				<p style="margin-top: 2px;">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per aconseguir la graduació desitjada.</p>
 				<br>
 				<div class="d">
 					<div class="g">
 						<p class="seccions">Volum d'aiguardent actual</p>
-						<p class="nota">NOTA: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà disminuït respecte l'inicial.</p>
+						<p class="nota">Nota: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà disminuït respecte a l'inicial.</p>
 						<input type="number" id="a_in" number placeholder="1000 (ml)" onkeyup="novesDades()" onchange="novesDades()">
 					</div>
 					<div class="f">
 						<p class="seccions">Graduació d'alcohol actual</p>
-						<p class="nota">NOTA: es mesura amb un alcoholímitre, sempre que l’aiguardent no porti o hi haguem afegit sucre.</p>
+						<p class="nota">Nota: es mesura amb un alcoholímetre, sempre que l'aiguardent no porti o hi hàgim afegit sucre.</p>
 						<input type="number" id="b_in" number placeholder="29 (%)" onkeyup="novesDades()" onchange="novesDades()">
 					</div>
 				</div>
@@ -47,11 +45,11 @@
 					<p style="font-size: 18px; margin-bottom: 0;">Afegeix</p>
 					<div class="d">
 						<div class="g">
-							<p id="f_a" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
+							<p id="f_a" style="font-weight: 700; font-size: 34px; margin: 0;"></p>
 							<p style="margin-top: 2px; font-size: 12px;">d'aigua</p>
 						</div>
 						<div class="f">
-							<p id="f_s" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
+							<p id="f_s" style="font-weight: 700; font-size: 34px; margin: 0;"></p>
 							<p style="margin-top: 2px; font-size: 12px;">de sucre</p>
 						</div>
 					</div>
