--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="ti">
 			<div id="t">
 				<p id="titol">Calculadora per rebaixar l'aiguardent</p>
-				<p style="margin-top: 2px;">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per aconseguir la graduació desitjada.</p>
+				<p class="subtitol">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per aconseguir la graduació desitjada.</p>
 				<br>
 				<div class="d">
 					<div class="g">
