Millores de disseny i usabilitat

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-	<html>
+	<html lang="ca">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -45,11 +45,11 @@
 					<p style="font-size: 18px; margin-bottom: 0;">Afegeix</p>
 					<div class="d">
 						<div class="g">
-							<p id="f_a" style="font-weight: 700; font-size: 34px; margin: 0;"></p>
+							<p id="f_a" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
 							<p style="margin-top: 2px; font-size: 12px;">d'aigua</p>
 						</div>
 						<div class="f">
-							<p id="f_s" style="font-weight: 700; font-size: 34px; margin: 0;"></p>
+							<p id="f_s" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
 							<p style="margin-top: 2px; font-size: 12px;">de sucre</p>
 						</div>
 					</div>
