--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Calculadora per rebaixar l'aiguardent de la ratafia al grau desitjat.">
 		<meta name="keywords" content="calculadora, ratafia, aiguardent, rebaixar, confraria, sucre">
 		<meta name="author" content="Aniol Pagès i Xavi Ribas - Confraria de la Ratafia">
-		<title>Calculadora per rebaixar aiguardent - Confraria de la Ratafia</title>
+		<title>Calculadora per rebaixar l'aiguardent - Confraria de la Ratafia</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
