--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 					<div class="g">
 						<p class="seccions">Volum d'aiguardent actual</p>
 						<p class="nota">Nota: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà disminuït respecte a l'inicial.</p>
-						<input type="number" id="a_in" number placeholder="1000 (ml)" onkeyup="novesDades()" onchange="novesDades()">
+						<input type="number" id="a_in" number placeholder="1000 (ml)" onkeyup="novesDades()" onchange="novesDades()" enterkeyhint="next">
 					</div>
 					<div class="f">
 						<p class="seccions">Graduació d'alcohol actual</p>
 						<p class="nota">Nota: es mesura amb un alcoholímetre, sempre que l'aiguardent no porti o hi hàgim afegit sucre.</p>
-						<input type="number" id="b_in" number placeholder="29 (%)" onkeyup="novesDades()" onchange="novesDades()">
+						<input type="number" id="b_in" number placeholder="29 (%)" onkeyup="novesDades()" onchange="novesDades()" enterkeyhint="next">
 					</div>
 				</div>
 				<div class="d">
 					<div class="g">
 						<p class="seccions">Graduació d'alcohol desitjada</p>
-						<input type="number" id="n_in" number placeholder="24 (%)" onkeyup="novesDades()" onchange="novesDades()">
+						<input type="number" id="n_in" number placeholder="24 (%)" onkeyup="novesDades()" onchange="novesDades()" enterkeyhint="next">
 					</div>
 					<div class="f">
 						<p class="seccions">Sucre que vols afegir per litre</p>
-						<input type="number" id="g_in" number placeholder="150 (g)" onkeyup="novesDades()" onchange="novesDades()">
+						<input type="number" id="g_in" number placeholder="150 (g)" onkeyup="novesDades()" onchange="novesDades()" enterkeyhint="done">
 					</div>
 				</div>
 				<div id="r" style="margin-top: 50px; display: none; opacity: 0;">
