--- a/index.html
+++ b/index.html
@@ -1,67 +1,84 @@
 <!doctype html>
-	<html lang="ca">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<meta name="description" content="Calculadora per rebaixar l'aiguardent de la ratafia al grau desitjat.">
-		<meta name="keywords" content="calculadora, ratafia, aiguardent, rebaixar, confraria, sucre">
-		<meta name="author" content="Aniol Pagès i Xavi Ribas - Confraria de la Ratafia">
-		<title>Calculadora per rebaixar l'aiguardent - Confraria de la Ratafia</title>
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
-	<body>
-		<div id="ti">
-			<div id="t">
-				<p id="titol">Calculadora per rebaixar l'aiguardent</p>
-				<p class="subtitol">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per aconseguir la graduació desitjada.</p>
-				<br>
-				<div class="d">
-					<div class="g">
-						<p class="seccions">Volum d'aiguardent actual</p>
-						<p class="nota">Nota: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà disminuït respecte a l'inicial.</p>
-						<input type="number" id="a_in" number placeholder="1000 (ml)" onkeyup="novesDades()" onchange="novesDades()" enterkeyhint="next">
-					</div>
-					<div class="f">
-						<p class="seccions">Graduació d'alcohol actual</p>
-						<p class="nota">Nota: es mesura amb un alcoholímetre, sempre que l'aiguardent no porti o hi hàgim afegit sucre.</p>
-						<input type="number" id="b_in" number placeholder="29 (%)" onkeyup="novesDades()" onchange="novesDades()" enterkeyhint="next">
-					</div>
+<html lang="ca">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="description" content="Calculadora per rebaixar l'aiguardent de la ratafia al grau desitjat.">
+	<meta name="keywords" content="calculadora, ratafia, aiguardent, rebaixar, confraria, sucre">
+	<meta name="author" content="Aniol Pagès i Xavi Ribas - Confraria de la Ratafia">
+	<title>Calculadora per rebaixar l'aiguardent - Confraria de la Ratafia</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<style>
+		@media (prefers-color-scheme: dark) {
+			body {
+				background-color: #000;
+			}
+		}
+	</style>
+</head>
+
+<body>
+	<div id="ti">
+		<div id="t">
+			<p id="titol">Calculadora per rebaixar l'aiguardent</p>
+			<p class="subtitol">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per aconseguir la
+				graduació desitjada.</p>
+			<br>
+			<div class="d">
+				<div class="g">
+					<p class="seccions">Volum d'aiguardent actual</p>
+					<p class="nota">Nota: després de la maceració i filtratge el volum i el grau de l’aiguardent haurà
+						disminuït respecte a l'inicial.</p>
+					<input type="number" id="a_in" number placeholder="1000 (ml)" onkeyup="novesDades()"
+						onchange="novesDades()" enterkeyhint="next">
 				</div>
-				<div class="d">
-					<div class="g">
-						<p class="seccions">Graduació d'alcohol desitjada</p>
-						<input type="number" id="n_in" number placeholder="24 (%)" onkeyup="novesDades()" onchange="novesDades()" enterkeyhint="next">
-					</div>
-					<div class="f">
-						<p class="seccions">Sucre que vols afegir per litre</p>
-						<input type="number" id="g_in" number placeholder="150 (g)" onkeyup="novesDades()" onchange="novesDades()" enterkeyhint="done">
-					</div>
-				</div>
-				<div id="r" style="margin-top: 50px; display: none; opacity: 0;">
-					<p style="font-size: 18px; margin-bottom: 0;">Afegeix</p>
-					<div class="d">
-						<div class="g">
-							<p id="f_a" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
-							<p style="margin-top: 2px; font-size: 12px;">d'aigua</p>
-						</div>
-						<div class="f">
-							<p id="f_s" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
-							<p style="margin-top: 2px; font-size: 12px;">de sucre</p>
-						</div>
-					</div>
-					<p id="f_v"></p>
+				<div class="f">
+					<p class="seccions">Graduació d'alcohol actual</p>
+					<p class="nota">Nota: es mesura amb un alcoholímetre, sempre que l'aiguardent no porti o hi hàgim
+						afegit sucre.</p>
+					<input type="number" id="b_in" number placeholder="29 (%)" onkeyup="novesDades()"
+						onchange="novesDades()" enterkeyhint="next">
 				</div>
 			</div>
+			<div class="d">
+				<div class="g">
+					<p class="seccions">Graduació d'alcohol desitjada</p>
+					<input type="number" id="n_in" number placeholder="24 (%)" onkeyup="novesDades()"
+						onchange="novesDades()" enterkeyhint="next">
+				</div>
+				<div class="f">
+					<p class="seccions">Sucre que vols afegir per litre</p>
+					<input type="number" id="g_in" number placeholder="150 (g)" onkeyup="novesDades()"
+						onchange="novesDades()" enterkeyhint="done">
+				</div>
+			</div>
+			<div id="r" style="margin-top: 50px; display: none; opacity: 0;">
+				<p style="font-size: 18px; margin-bottom: 0;">Afegeix</p>
+				<div class="d">
+					<div class="g">
+						<p id="f_a" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
+						<p style="margin-top: 2px; font-size: 12px;">d'aigua</p>
+					</div>
+					<div class="f">
+						<p id="f_s" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
+						<p style="margin-top: 2px; font-size: 12px;">de sucre</p>
+					</div>
+				</div>
+				<p id="f_v"></p>
+			</div>
 		</div>
-		<br>
-		<div class="divC">
-			<a href="https://ratafia.cat" target="_blank" style="font-size: 12px;">© Confraria de la Ratafia</a>
-		</div>
-		<br>
-		<script type="text/javascript" src="script.js"></script>
-	</body>
-	</html>
+	</div>
+	<br>
+	<div class="divC">
+		<a href="https://ratafia.cat" target="_blank" style="font-size: 12px;">© Confraria de la Ratafia</a>
+	</div>
+	<br>
+	<script type="text/javascript" src="script.js"></script>
+</body>
+
+</html>
