--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<style>
-		@media (prefers-color-scheme: dark) {
-			body {
-				background-color: #000;
-			}
-		}
-	</style>
 </head>
 
 <body>
@@ -57,16 +50,16 @@
 						onchange="novesDades()" enterkeyhint="done">
 				</div>
 			</div>
-			<div id="r" style="margin-top: 50px; display: none; opacity: 0;">
-				<p style="font-size: 18px; margin-bottom: 0;">Afegeix</p>
+			<div id="r">
+				<p class="ap">Afegeix</p>
 				<div class="d">
 					<div class="g">
-						<p id="f_a" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
-						<p style="margin-top: 2px; font-size: 12px;">d'aigua</p>
+						<p id="f_a" class="fp"></p>
+						<p class="sv">d'aigua</p>
 					</div>
 					<div class="f">
-						<p id="f_s" style="font-weight: 600; font-size: 34px; margin: 0;"></p>
-						<p style="margin-top: 2px; font-size: 12px;">de sucre</p>
+						<p id="f_s" class="fp"></p>
+						<p class="sv">de sucre</p>
 					</div>
 				</div>
 				<p id="f_v"></p>
@@ -75,7 +68,7 @@
 	</div>
 	<br>
 	<div class="divC">
-		<a href="https://ratafia.cat" target="_blank" style="font-size: 12px;">© Confraria de la Ratafia</a>
+		<a href="https://ratafia.cat" target="_blank">Desenvolupat per la Confraria de la Ratafia.</a>
 	</div>
 	<br>
 	<script type="text/javascript" src="script.js"></script>
