Forçar càrrega d'estils i scripts actualitzats

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css?v=92B604F4-073A-4BE9-9C0C-C5AEA9CBAC92">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
 		<a href="https://ratafia.cat" target="_blank">Desenvolupat per la Confraria de la Ratafia.</a>
 	</div>
 	<br>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="script.js?v=92B604F4-073A-4BE9-9C0C-C5AEA9CBAC92"></script>
 </body>
 
 </html>
