Afegir logo Confraria

--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
-	<link rel="stylesheet" type="text/css" href="style.css?v=92B604F4-073A-4BE9-9C0C-C5AEA9CBAC92">
+	<link rel="stylesheet" type="text/css" href="style.css?v=88B8F447-E126-40C3-A0D9-132696FEAC85">
 </head>
 
 <body>
 	<div id="ti">
 		<div id="t">
-			<p id="titol">Calculadora per rebaixar l'aiguardent</p>
-			<p class="subtitol">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per aconseguir la
-				graduació desitjada.</p>
+			<div class="row">
+				<img src="logo.svg" class="logo" alt="">
+				<div>
+					<p id="titol">Calculadora per rebaixar l'aiguardent</p>
+					<p class="subtitol">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per
+						aconseguir
+						la
+						graduació desitjada.</p>
+				</div>
+			</div>
 			<br>
 			<div class="d">
 				<div class="g">
@@ -71,7 +78,7 @@
 		<a href="https://ratafia.cat" target="_blank">Desenvolupat per la Confraria de la Ratafia.</a>
 	</div>
 	<br>
-	<script type="text/javascript" src="script.js?v=92B604F4-073A-4BE9-9C0C-C5AEA9CBAC92"></script>
+	<script type="text/javascript" src="script.js?v=88B8F447-E126-40C3-A0D9-132696FEAC85"></script>
 </body>
 
 </html>
