Afegir neerlandès i noruec

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 							<option value="en">English</option>
 							<option value="fr">Français</option>
 							<option value="de">Deutsch</option>
+							<option value="nl">Nederlands</option>
 							<option value="it">Italiano</option>
 							<option value="pt">Português</option>
+							<option value="no">Norsk</option>
 							<option value="jp">日本語</option>
 						</select>
 					</div>
