--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<a href="https://ratafia.cat" target="_blank" data-translate="developed_by">Desenvolupat per la Confraria de la Ratafia.</a>
 	</div>
 	<br>
-	<script type="text/javascript" src="i18n.js"></script>
+	<script type="text/javascript" src="i18n.js?v=230D5B5C-73DC-4040-AE73-53006FEF2766"></script>
 	<script type="text/javascript" src="script.js?v=230D5B5C-73DC-4040-AE73-53006FEF2766"></script>
 </body>
 
