Millores a les analítiques

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 	<br>
 	<script type="text/javascript" src="i18n.js?v=4C486BBC-D22F-4BD5-AC68-151065C856E1"></script>
 	<script type="text/javascript" src="script.js?v=4C486BBC-D22F-4BD5-AC68-151065C856E1"></script>
-	<script defer data-domain="calculadora.ratafia.app" src="https://analitiques.ratafia.app/js/plausible.js"></script>
+	<script defer data-domain="calculadora.ratafia.app" src="https://analitiques.ratafia.app/js/script.tagged-events.js"></script>
+	<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </body>
 
 </html>
